[gd_scene load_steps=13 format=2]

[ext_resource path="res://characters/Character2.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/soldier_collision.tres" type="Shape" id=2]
[ext_resource path="res://characters/AI.gd" type="Script" id=3]
[ext_resource path="res://characters/vision_cone_shape.tres" type="Shape" id=4]
[ext_resource path="res://characters/brain.gd" type="Script" id=5]
[ext_resource path="res://assets/Main.material" type="Material" id=6]
[ext_resource path="res://assets/kenney_emotes/emote_question.png" type="Texture" id=7]

[sub_resource type="SpatialMaterial" id=9]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = ExtResource( 7 )

[sub_resource type="QuadMesh" id=8]

[sub_resource type="BoxShape" id=6]

[sub_resource type="PrismMesh" id=3]
size = Vector3( 1, 1, 1 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 1, 1, 1 )

[node name="Spatial" type="KinematicBody" groups=["AI"]]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.926618, 0.254346 )
visible = false
shape = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="RotationHelper" type="Spatial" parent="."]

[node name="Character2" parent="RotationHelper" instance=ExtResource( 1 )]

[node name="Area" type="Area" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="RotationHelper/Area"]
shape = ExtResource( 4 )

[node name="RayCast" type="RayCast" parent="RotationHelper/Area"]
enabled = true

[node name="RayCast2" type="RayCast" parent="RotationHelper/Area"]
enabled = true
collision_mask = 4

[node name="MeshInstance" type="MeshInstance" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.28297, 0 )
material_override = SubResource( 9 )
cast_shadow = 0
mesh = SubResource( 8 )

[node name="Area2" type="Area" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="RotationHelper/Area2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 1 )
shape = SubResource( 6 )

[node name="brain" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="ContextRays" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 7 )
material/0 = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="knockout_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="wake_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="RotationHelper/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="RotationHelper/Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="RotationHelper/Area2" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="knockout_timer" to="." method="_on_knockout_timer_timeout"]
[connection signal="timeout" from="wake_timer" to="." method="_on_wake_timer_timeout"]
